# Projects

./: .gitignore  ARCHITECTURE_PLAN.md  CMakeLists.txt  CONVERSATION.md  Dockerfile.web  Makefile  agent_loop_sequence.drawio  default.json  deploy.sh  docker-compose.yml  llama_demo.cpp  llama_functions.cpp  llama_functions.h  nginx.conf  ollama_functions.py  run_tests.py  ssh -T git@github.com  ssh -T git@github.com.pub  start.sh  system_prompt.md  test_ollama_functions.py
agent/: .gitignore  CMakeLists.txt  agent_engine.map
agent/docs/: LLM_PROVIDERS.md
agent/docs/agent/: README.md  c_api_guide.md  concurrency.md  prompts_guide.md
agent/docs/agent/components/: README.md  action.md  actions.md  agent.md  agent_context.md  agent_manager.md  ai_model.md  ai_model_llama.md  ai_model_llm_client.md  ai_model_memory_backend.md  ai_model_vllm.md  bash_action.md  batch_executor.md  blackboard.md  blackboard_actions.md  c_api.md  code_intel_stage.md  edit_action.md  event_bus.md  glob_action.md  grep_action.md  injection_stage.md  llm_client.md  locate_stage.md  mcp_tool_action.md  memory_actions.md  memory_backend.md  message_inbox.md  messaging_actions.md  observe_stage.md  orient_stage.md  plan_adapt_stage.md  plan_cache.md  plan_cache_check_stage.md  prompt_loader.md  quota_manager.md  read_action.md  read_stage.md  reason_stage.md  replay_stage.md  (+14 more)
agent/examples/: cli_driver.cpp
agent/include/agent/: action.hpp  agent.hpp  agent_context.hpp  agent_logger.hpp  agent_manager.hpp  ai_model_llm_client.hpp  ai_model_memory_backend.hpp  batch_executor.hpp  blackboard.hpp  event_bus.hpp  llm_client.hpp  llm_factory.hpp  memory_backend.hpp  message_inbox.hpp  plan_cache.hpp  prompt_loader.hpp  quota.hpp  stage.hpp  thread_pool.hpp  work_factory.hpp  work_item.hpp
agent/include/agent_engine/: c_api.h
agent/prompts/: code_intel_stage.md  injection_stage.md  locate_stage.md  observe_stage.md  orient_stage.md  plan_adapt_stage.md  plan_cache_check_stage.md  read_stage.md  reason_stage.md  respond_stage.md  transform_stage.md  understand_stage.md  validate_stage.md
agent/src/agent/: agent.cpp  agent_context.cpp  agent_logger.cpp  agent_manager.cpp  ai_model_llm_client.cpp  ai_model_memory_backend.cpp  batch_executor.cpp  blackboard.cpp  event_bus.cpp  llm_factory.cpp  message_inbox.cpp  plan_cache.cpp  prompt_loader.cpp  quota.cpp  stage.cpp  thread_pool.cpp  work_factory.cpp  work_item.cpp
agent/src/agent/actions/: bash_action.cpp  bash_action.hpp  blackboard_actions.cpp  blackboard_actions.hpp  edit_action.cpp  edit_action.hpp  glob_action.cpp  glob_action.hpp  grep_action.cpp  grep_action.hpp  mcp_tool_action.cpp  mcp_tool_action.hpp  memory_actions.cpp  memory_actions.hpp  messaging_actions.cpp  messaging_actions.hpp  read_action.cpp  read_action.hpp  task_action.cpp  task_action.hpp  todo_write_action.cpp  todo_write_action.hpp  web_fetch_action.cpp  web_fetch_action.hpp  web_search_action.cpp  web_search_action.hpp  write_action.cpp  write_action.hpp
agent/src/agent/stages/: code_intel_stage.cpp  code_intel_stage.hpp  injection_stage.cpp  injection_stage.hpp  locate_stage.cpp  locate_stage.hpp  observe_stage.cpp  observe_stage.hpp  orient_stage.cpp  orient_stage.hpp  plan_adapt_stage.cpp  plan_adapt_stage.hpp  plan_cache_check_stage.cpp  plan_cache_check_stage.hpp  read_stage.cpp  read_stage.hpp  reason_stage.cpp  reason_stage.hpp  replay_stage.cpp  replay_stage.hpp  respond_stage.cpp  respond_stage.hpp  transform_stage.cpp  transform_stage.hpp  understand_stage.cpp  understand_stage.hpp  validate_stage.cpp  (+1 more)
agent/src/c_api/: c_api.cpp
agent/tests/agent/: test_agent_loop.cpp  test_ai_model_adapter.cpp  test_batch_executor.cpp  test_c_abi.cpp  test_cancellation.cpp  test_chains.cpp  test_concurrency.cpp  test_cycle_detection.cpp  test_dependency_dag.cpp  test_determinism.cpp  test_factory.cpp  test_fan_out_in.cpp  test_helper.hpp  test_injection_reading1.cpp  test_injection_reading2.cpp  test_pattern_a_delegation.cpp  test_pattern_b_messaging.cpp  test_pattern_c_blackboard.cpp  test_prompt_loader.cpp  test_quotas.cpp  test_real_time_injection.cpp  test_references.cpp  test_starvation.cpp
auth-server/: .env.example  CMakeLists.txt  requirements.txt
auth-server/docs/: README.md
auth-server/src/: app.py  crypto.cpp  crypto.hpp  jwt_utils.py  main.cpp  models.py  pkce.py  store.cpp  store.hpp
auth-server/src/routes/: authorize.py  introspect.py  register.py  token.py
forwarder/windows/: CMakeLists.txt  README.md  build.bat
mcp-server/: .env.example  .gitignore  CMakeLists.txt  Makefile  db_client.h  mcp_handler.h  mcp_types.h  tool_registry.h
mcp-server/docs/: README.md  TOOLS.md
mcp-server/src/: app.py  auth.cpp  auth.hpp  auth.py  jsonrpc.py  main.cpp  tool_registry.cpp  tool_registry.hpp  tool_runner.cpp  tool_runner.hpp
mcp-server/src/tools/: asset_tools.py  graph_tools.py  registry.py  siem_tools.py
mcp-server/src/transport/: http.py  stdio.py
mcp-server/tools/: _base.py  astronomy_apod.py  astronomy_iss_location.py  astronomy_sunrise_sunset.py  calendar_date_diff.py  calendar_holidays.py  country_info.py  country_list.py  dad_joke.py  deepl_translate.py  finance_company_info.py  finance_crypto_price.py  finance_currency_exchange.py  finance_stock_history.py  finance_stock_quote.py  food_barcode.py  food_search.py  github_get_file.py  github_get_repo.py  github_get_user.py  github_list_commits.py  github_list_issues.py  github_list_prs.py  github_search_code.py  github_search_repos.py  google_nlp_entities.py  google_nlp_sentiment.py  google_vision_labels.py  hackernews_item.py  hackernews_top.py  maps_directions.py  maps_distance_matrix.py  maps_elevation.py  maps_geocode.py  maps_nearby_places.py  maps_place_details.py  maps_reverse_geocode.py  maps_timezone.py  math_evaluate.py  math_unit_convert.py  (+49 more)
siem/forwarder/linux/: CMakeLists.txt  README.md  build.sh  check_prerequisites.sh
siem/forwarder/windows/: .gitignore  CMakeLists.txt  NETWORK_PACKET_CAPTURE.md  README.md  build.bat  check_prerequisites.bat  install_prerequisites.ps1
(+302 files in other folders)
